<resources>
    <string name="app_name">James-mobile</string>
    <string name="textEmailForgotPassword">Please enter your mail :</string>
    <string name="textNewEmail">Please enter your new mail : </string>
    <string name="textNewEmailConfirmation">Please repeat your new mail : </string>
    <string name="textEmailForgotPasswordConfirmation">Please repeat your mail : </string>
    <string name="textFormation">Training</string>
    <string name="textMatiere">Subject</string>
    <string name="textRemember">Remember me</string>
    <string name="textConnecter">Log in</string>
    <string name="textForgotPassword">Forgot your password ?</string>
    <string name="textEnterPassword">Please enter a new password : </string>
    <string name="textEnterPasswordConfirmation">Please repeat your new password : </string>
    <string name="textNomEleve">Student\'s name</string>
    <string name="textEmargerUnCours">Saving a course</string>
    <string name="boutonValiderChangerEmail">Confirm mail change</string>
    <string name="boutonChangerCouleur">Change application\'s color</string>
    <string name="boutonChangerLangue">Change application\'s language</string>
    <string name="boutonValiderCours">Course validation</string>
    <string name="boutonChangerSignature">Change your signature</string>
    <string name="boutonChangerEmail">Change your mail</string>
    <string name="boutonChangerPassword">Change your password</string>
    <string name="boutonEnvoyerEmail">Send a reset mail</string>
    <string name="boutonEnvoyer">Send</string>
    <string name="heureDebut">Start time</string>
    <string name="heureFin">End time</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="choisir">Choose</string>
    <string name="reset">Reset</string>
    <string name="valider">Validate</string>
    <string name="parametres">Settings</string>
    <string name="bonjour">Hello</string>
    <string name="francais" >Français</string>
    <string name="anglais" >English</string>
    <string name="espagnol">Español</string>
    <string name="roumain">Română</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="retard">Late</string>
    <string name="retour">Return</string>
    <string name="signature">Signature</string>

    <string name="confirmationAjoutCours">Confirm the addition of the course</string>
    <string name="nombreRetardataire">Number Delayer(s)</string>
    <string name="coursAjoute">Course correctly added</string>
    <string name="annulerCoursAjout">You have cancelled this decision</string>
    <string name="tousSigne">Not everyone has signed </string>
    <string name="nombreAbsent">Number Absent</string>
    <string name="annuler">Cancel</string>
    <string name="messageServeur">Server message : </string>
    <string name="emailCorrespondentPas">Emails do not match</string>
    <string name="champsVideEmail">Empty field, please enter a valid email address</string>
    <string name="emailEnvoyeSurEmail">An email has just been sent to your email address.</string>
    <string name="emailPasValide">Please enter a valid email address</string>
    <string name="loginOuMdpIncorrect">Incorrect login or password</string>
    <string name="ProblemeCommunicationServeur">Communication problem with the server</string>
    <string name="mdpCorrespondentPas">Passwords do not match</string>
    <string name="signatureConfirmation">Confirmation of the signature</string>
    <string name="alertSignatureConfirmation">Would you like to confirm this signature?</string>
    <string name="oui">Yes</string>
    <string name="non">No</string>
    <string name="signatureEnvoyee">Signature sent!</string>
    <string name="annulationEnvoiSignature">Cancellation of the addition of the signature</string>
    <string name="accederProfil">Access profile</string>
    <string name="accederPreference">Access preferencies</string>
    <string name="dureeCoursAvance">Courses duration advanced settings</string>
    <string name="texteDureeCours">Default course duration :</string>
    <string name="texteLanguage">Application\'s language :</string>


    <string name="heuresNotOk">The end hour number must be coherent</string>

    <string-array name="languages">
        <item>@string/francais</item>
        <item>@string/anglais</item>
        <item>@string/espagnol</item>
        <item>@string/roumain</item>
    </string-array>

    <string-array name="dureeCours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="button">Button</string>
    <string-array name="etat_possible">
        <item>Présent</item>
        <item>En Retard</item>
        <item>Absent</item>
    </string-array>
    <string name="title_activity_parametre">ParametreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>