<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/BT_emailChangeConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="66dp"
        android:text="@string/boutonValiderChangerEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_emailChangeConfirmation"
        android:onClick="emailChange"/>

    <EditText
        android:id="@+id/ET_emailChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="166dp"
        android:layout_marginBottom="96dp"
        android:ems="10"
        android:hint="@string/textEmailForgotPassword"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/ET_emailChangeConfirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ET_emailChangeConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/textEmailForgotPasswordConfirmation"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/BT_emailChangeConfirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_emailChange" />
</androidx.constraintlayout.widget.ConstraintLayout>