<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passwordChangeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_uvsq"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/logo_james"></ImageView>

    <EditText
        android:id="@+id/passwordFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/green_uvsq"
        android:ems="10"
        android:hint="@string/textEnterPassword"
        android:inputType="textPassword"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/passwordVerif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="21dp"
        android:backgroundTint="@color/green_uvsq"
        android:ems="10"
        android:hint="@string/textEnterPasswordConfirmation"
        android:inputType="textPassword"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/BT_confirmPasswordChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/background"
        android:backgroundTint="@color/green_uvsq"
        android:onClick="passwordChange"
        android:text="@string/boutonEnvoyer"
        android:textColor="@color/white" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/logo_uvsq"></ImageView>

</LinearLayout>