<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parametreLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_uvsq">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="0"
        app:srcCompat="@drawable/logo_james"></ImageView>

    <TextView
        android:id="@+id/TV_dureeCours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/texteDureeCours"
        android:textSize="20dp"
        android:textColor="@color/white"/>

    <Spinner
        android:id="@+id/SP_dureeCoursSimple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:spinnerMode="dropdown"
        android:backgroundTint="@color/green_uvsq"/>

    <TextView
        android:id="@+id/TV_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/texteLanguage"
        android:textSize="20dp"
        android:textColor="@color/white"/>

    <Spinner
        android:id="@+id/SP_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:spinnerMode="dropdown"
        android:backgroundTint="@color/green_uvsq"/>

    <Button
        android:id="@+id/BTConfirmeParametre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background"
        android:backgroundTint="@color/green_uvsq"
        android:onClick="changePreferencies"
        android:text="@string/choisir" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/logo_uvsq"></ImageView>

</LinearLayout>